[gd_scene load_steps=38 format=3 uid="uid://bgpmhkt3uc611"]

[ext_resource type="Script" path="res://Scripts/Game/SoloGame.gd" id="1_p6vcs"]
[ext_resource type="Texture2D" uid="uid://dgl0otlicwp01" path="res://Assets/Sprites/bg/bg02.png" id="2_ujttg"]
[ext_resource type="PackedScene" uid="uid://dn4gmuydyqp6y" path="res://Scenes/Game/TinyPuyoGame.tscn" id="3_prqse"]
[ext_resource type="Texture2D" uid="uid://b1lgs81wy67hp" path="res://Assets/Sprites/puyo_aqua_spritesheet.png" id="4_eiurf"]
[ext_resource type="AudioStream" uid="uid://jkyjc0upx73i" path="res://Assets/SFX/lose.wav" id="5_cxfvr"]
[ext_resource type="Texture2D" uid="uid://c50bisg8juta5" path="res://Assets/Sprites/matrix/ready.png" id="5_kwwgk"]
[ext_resource type="Texture2D" uid="uid://bka4v05qcc3ja" path="res://Assets/Sprites/matrix/go.png" id="6_6nbi3"]
[ext_resource type="AudioStream" uid="uid://dmmht5rtsq11a" path="res://Assets/SFX/prepare.wav" id="6_mucq3"]
[ext_resource type="Texture2D" uid="uid://c6t18jm83jdcc" path="res://Assets/Sprites/matrix/lose.png" id="7_cevgh"]
[ext_resource type="AudioStream" uid="uid://clg3k2aent457" path="res://Assets/SFX/matchStart.wav" id="7_dw8eu"]
[ext_resource type="AudioStream" uid="uid://ccfbkpfv8psaa" path="res://Assets/SFX/attack1.wav" id="8_h58ro"]
[ext_resource type="AudioStream" uid="uid://2ap3imurmp4a" path="res://Assets/SFX/attack2.wav" id="9_gnk1l"]
[ext_resource type="AudioStream" uid="uid://bhse4n8as321j" path="res://Assets/SFX/attack3.wav" id="10_nlnnb"]
[ext_resource type="AudioStream" uid="uid://cb1rbb7hdpayk" path="res://Assets/SFX/attack4.wav" id="11_3cfp7"]
[ext_resource type="AudioStream" uid="uid://c512b8h32oufr" path="res://Assets/SFX/win.wav" id="12_tq6f2"]
[ext_resource type="AudioStream" uid="uid://dyw5miinuqndn" path="res://Assets/SFX/tiemout.wav" id="13_0rk65"]
[ext_resource type="AudioStream" uid="uid://m4rxk1ciya11" path="res://Assets/SFX/timeoutEnd.wav" id="14_223le"]
[ext_resource type="AudioStream" uid="uid://thlqjncdoh55" path="res://Assets/SFX/challenge.wav" id="15_a3toa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scksh"]
bg_color = Color(0.290196, 0.447059, 0.823529, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_katm3"]
bg_color = Color(0.14902, 0.627451, 0.972549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcmnw"]
bg_color = Color(0.317647, 0.513726, 0.470588, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bplcu"]
bg_color = Color(0, 0.713726, 0.996078, 0.623529)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_detail = 15
shadow_color = Color(0, 0, 0, 0.160784)
shadow_size = 1
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37yav"]
bg_color = Color(0.509804, 0.552941, 0.980392, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.145098, 0.145098, 0.145098, 0.827451)
shadow_size = 7

[sub_resource type="Theme" id="Theme_jqlrh"]
default_font_size = 24
Button/colors/font_color = Color(1, 1, 1, 1)
Button/styles/hover = SubResource("StyleBoxFlat_scksh")
Button/styles/normal = SubResource("StyleBoxFlat_katm3")
Button/styles/pressed = SubResource("StyleBoxFlat_wcmnw")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 4
MarginContainer/constants/margin_bottom = 0
MarginContainer/constants/margin_left = 0
MarginContainer/constants/margin_right = 0
MarginContainer/constants/margin_top = 0
Panel/styles/panel = SubResource("StyleBoxFlat_bplcu")
PopupPanel/styles/panel = SubResource("StyleBoxFlat_37yav")

[sub_resource type="Animation" id="Animation_cv65l"]
resource_name = "lose"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(179, 180), Vector2(179, 150), Vector2(179, 130), Vector2(179, 1200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.341069, 0.693421]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2mqbs"]
_data = {
"lose": SubResource("Animation_cv65l")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_75rf2"]
atlas = ExtResource("4_eiurf")
region = Rect2(855, 512, 119, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2muoe"]
atlas = ExtResource("4_eiurf")
region = Rect2(720, 792, 65, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_qftdl"]
atlas = ExtResource("4_eiurf")
region = Rect2(1008, 787, 67, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdvsh"]
atlas = ExtResource("4_eiurf")
region = Rect2(792, 788, 66, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh4ww"]
atlas = ExtResource("4_eiurf")
region = Rect2(936, 787, 66, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_mouuq"]
atlas = ExtResource("4_eiurf")
region = Rect2(1080, 798, 67, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_856k7"]
atlas = ExtResource("4_eiurf")
region = Rect2(864, 788, 66, 71)

[sub_resource type="SpriteFrames" id="SpriteFrames_unfs1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75rf2")
}],
"loop": true,
"name": &"comet",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2muoe")
}],
"loop": true,
"name": &"crown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qftdl")
}],
"loop": true,
"name": &"large",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdvsh")
}],
"loop": true,
"name": &"moon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh4ww")
}],
"loop": true,
"name": &"rock",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mouuq")
}],
"loop": true,
"name": &"small",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_856k7")
}],
"loop": true,
"name": &"star",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_t57r5"]
resource_name = "End"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../SoundEffects/Lose")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_cxfvr")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOver:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(354, 196), Vector2(354, 250)]
}

[sub_resource type="Animation" id="Animation_dfkki"]
resource_name = "Start"
length = 3.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SoundEffects/Prepare")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_mucq3")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_dw8eu")
}],
"times": PackedFloat32Array(0.4, 2)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ready:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Go:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ready:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(351, 177), Vector2(351, 250)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Go:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.73, 0.73), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Go:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2, 2.5, 2.8, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Ready:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.5, 1, 1.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ntpme"]
_data = {
"End": SubResource("Animation_t57r5"),
"Start": SubResource("Animation_dfkki")
}

[node name="SoloGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jqlrh")
script = ExtResource("1_p6vcs")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ujttg")
expand_mode = 2

[node name="PuyoGame" parent="." instance=ExtResource("3_prqse")]
position = Vector2(179, 180)
scale = Vector2(0.665, 0.665)
feverMode = false
dropSets = true

[node name="GameAnims" type="AnimationPlayer" parent="PuyoGame"]
libraries = {
"": SubResource("AnimationLibrary_2mqbs")
}

[node name="GameModePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 74.0
offset_right = 1018.0
offset_bottom = 120.0

[node name="ModeContainer" type="HBoxContainer" parent="GameModePanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 1.0
offset_right = 184.0
offset_bottom = 41.0
theme_override_constants/separation = 80

[node name="ModeLabel" type="Label" parent="GameModePanel/ModeContainer"]
layout_mode = 2
text = "Mode:"

[node name="Mode" type="Label" parent="GameModePanel/ModeContainer"]
layout_mode = 2
text = "Endless"

[node name="InfoPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 599.0
offset_top = 147.0
offset_right = 1020.0
offset_bottom = 387.0

[node name="VBox" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 39.0
offset_top = -85.5
offset_right = 205.0
offset_bottom = 85.5
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Chain" type="HBoxContainer" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="MaxChainLabel" type="Label" parent="InfoPanel/VBox/Chain"]
layout_mode = 2
text = "Max chain:"

[node name="MaxChain" type="Label" parent="InfoPanel/VBox/Chain"]
layout_mode = 2

[node name="Speed" type="HBoxContainer" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 170

[node name="SpeedLabel" type="Label" parent="InfoPanel/VBox/Speed"]
layout_mode = 2
text = "Speed:"

[node name="Speed" type="Label" parent="InfoPanel/VBox/Speed"]
layout_mode = 2

[node name="Time" type="HBoxContainer" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 180

[node name="TimeLabel" type="Label" parent="InfoPanel/VBox/Time"]
layout_mode = 2
text = "Time:"

[node name="Time" type="Label" parent="InfoPanel/VBox/Time"]
layout_mode = 2

[node name="GarbageSentPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 561.0
offset_right = 1025.0
offset_bottom = 620.0

[node name="Label" type="Label" parent="GarbageSentPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -13.0
offset_right = 143.0
offset_bottom = 13.0
grow_vertical = 2
text = "Nuisance Sent:"

[node name="NuisanceQueue" type="Node2D" parent="GarbageSentPanel"]
position = Vector2(243, 29)

[node name="1" type="AnimatedSprite2D" parent="GarbageSentPanel/NuisanceQueue"]
position = Vector2(3, 0)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_unfs1")
animation = &"small"

[node name="2" type="AnimatedSprite2D" parent="GarbageSentPanel/NuisanceQueue"]
position = Vector2(47, 0)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_unfs1")
animation = &"small"

[node name="3" type="AnimatedSprite2D" parent="GarbageSentPanel/NuisanceQueue"]
position = Vector2(96, 0)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_unfs1")
animation = &"small"

[node name="4" type="AnimatedSprite2D" parent="GarbageSentPanel/NuisanceQueue"]
position = Vector2(141, 0)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_unfs1")
animation = &"small"

[node name="5" type="AnimatedSprite2D" parent="GarbageSentPanel/NuisanceQueue"]
position = Vector2(186, 0)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_unfs1")
animation = &"small"

[node name="6" type="AnimatedSprite2D" parent="GarbageSentPanel/NuisanceQueue"]
position = Vector2(231, 0)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_unfs1")
animation = &"small"

[node name="UIAnims" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ready" type="Sprite2D" parent="UIAnims"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(351, 250)
texture = ExtResource("5_kwwgk")

[node name="Go" type="Sprite2D" parent="UIAnims"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(350, 283)
texture = ExtResource("6_6nbi3")

[node name="GameOver" type="Sprite2D" parent="UIAnims"]
visible = false
position = Vector2(354, 196)
texture = ExtResource("7_cevgh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UIAnims"]
libraries = {
"": SubResource("AnimationLibrary_ntpme")
}

[node name="SoundEffects" type="Node" parent="."]

[node name="Lose" type="AudioStreamPlayer2D" parent="SoundEffects"]

[node name="Prepare" type="AudioStreamPlayer2D" parent="SoundEffects"]

[node name="Start" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("7_dw8eu")

[node name="Attack1" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("8_h58ro")

[node name="Attack2" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("9_gnk1l")

[node name="Attack3" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("10_nlnnb")

[node name="Attack4" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("11_3cfp7")

[node name="Win" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("12_tq6f2")

[node name="Timeout" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("13_0rk65")

[node name="TimeoutEnd" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("14_223le")

[node name="ChallengeUp" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("15_a3toa")

[node name="TimeOutFX" type="Timer" parent="."]
one_shot = true

[connection signal="lost" from="PuyoGame" to="." method="_on_puyo_game_lost"]
[connection signal="sendDamage" from="PuyoGame" to="." method="_on_puyo_game_send_damage"]
[connection signal="sendPoppedPuyos" from="PuyoGame" to="." method="_on_puyo_game_send_popped_puyos"]
[connection signal="timeout" from="TimeOutFX" to="." method="_on_time_out_fx_timeout"]
